examples/test/testpolicy13823.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13823
  namespace: namespace444
spec:
  podSelector:
    matchLabels:
      key31: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value33
          key23: value3
      podSelector:
        matchLabels:
          key40: value10
          key15: value14
          key2: value32
